--- a/css/styles.css
+++ b/css/styles.css
@@ -311,19 +311,59 @@ select {
 	color: #FF6000;
 }
 
-.modal-dialog {
-	/* margin-right: 1rem;
-	margin-left: 1rem; */
-	pointer-events: all;
+
+/* POPUP */
+.popup {
+	width: 100%;
+ 	padding: 20px;
+	text-align: center;
 }
 
-.modal-content .btn-close {
-	position: absolute;
-	right: 6px;
-	top: 10px;
-	/* background: transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e") no-repeat; */
-	background-size: 16px 16px;
+.popup img {
+	width: 70px;
+	height: auto;
+	margin: 0 auto;
+	display: block;
+	margin-bottom: 25px;
 }
+
+.popup h1 {
+	font-size: 2rem;
+    margin-bottom: 25px;
+	color:#5E6576;
+}
+
+.popup h3.code {
+	font-size: 1rem;
+    /* margin-bottom: 1rem; */
+	color:#222;
+	display: inline-block;
+	text-align: center;
+	/* padding: 10px 20px; */
+	clear: both;
+	font-weight: normal;
+}
+
+.popup a {
+	display: inline-block;
+    margin: 0 auto;
+    padding: 9px 20px;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 14px;
+    background-color: #8BC34A;
+    border-radius: 17px;
+}
+
+.popup a i{
+	margin-right: 5px;
+	color:#fff;
+}
+
+#successModal .modal-header{
+    border: 0px;
+}
+/* end of POPUP */
 
 
 /**********************/
@@ -593,7 +633,7 @@ select {
 	background-size: cover;
 }
 
-.reservation h4 {
+.reservation h3 {
 	margin-bottom: 2rem;
 	color: #ffffff;
 }
@@ -611,6 +651,10 @@ select {
 	padding-top: 5rem;
 	padding-bottom: 8.5rem;
 	/* text-align: center; */
+}
+
+.form .back {
+	text-decoration: none;
 }
 
 
